Understand basic angular.js binding and how to us some of the engine directives. Looking to the routing now.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     <div>
       {{test}}
     </div>
+      <div ng-repeat="blog in blogs">
+        <div>{{blog}}</div>
+      </div>
   </body>
 </html>
